# landstalker-lib

./: CMakeLists.txt  exceptions.hpp  wrap_file.cmake
assets/: entity_type_names.json
constants/: entity_type_codes.hpp  flags.hpp  item_codes.hpp  map_codes.hpp  offsets.hpp  symbols.hpp  values.hpp
io/: blocksets_decoder.cpp  blocksets_encoder.cpp  exports.cpp  io.hpp  map_layout_decoder.cpp  map_layout_encoder.cpp  map_layout_new_encoder.cpp  textbanks_decoder.cpp  textbanks_decoder.hpp  textbanks_encoder.cpp  textbanks_encoder.hpp  world_rom_reader.cpp  world_rom_reader.hpp  world_rom_writer.cpp  world_rom_writer.hpp
md_tools/: code.cpp  code.hpp  rom.cpp  rom.hpp  types.hpp
model/: blockset.hpp  entity.cpp  entity.hpp  entity_type.cpp  entity_type.hpp  item.cpp  item.hpp  item_source.cpp  item_source.hpp  map.cpp  map.hpp  map_connection.hpp  map_layout.hpp  map_palette.cpp  map_palette.hpp  spawn_location.hpp  tile.hpp  world.cpp  world.hpp  world_teleport_tree.hpp
model/data/: entity_type.json  entity_type.json.hxx  item.json  item.json.hxx  item_source.json  item_source.json.hxx  world_teleport_tree.json.hxx
patches/: add_function_to_items_on_use.cpp  add_statue_of_jypta_effect.cpp  alter_fahl_challenge.cpp  alter_gold_rewards_handling.cpp  alter_items_consumability.cpp  alter_lantern_handling.cpp  alter_nigel_colors.cpp  alter_ui_color.cpp  extend_rom.cpp  fix_hud_tilemap.cpp  fix_item_checks.cpp  game_init.cpp  game_patch.hpp  gameplay_tweaks.cpp  handle_additional_jewels.cpp  handle_armor_upgrades.cpp  handle_items_renaming.cpp  improve_engine.cpp  make_sword_of_gaia_work_in_volcano.cpp  new_map_format.cpp  normalize_special_enemies_hp.cpp  patches.hpp  quality_of_life.cpp  story_dependencies.cpp
patches/assets/: blue_jewel.bin.hxx  fixed_hud_tilemap.bin.hxx  green_jewel.bin.hxx  yellow_jewel.bin.hxx
patches/cosmetic/: patch_alter_inventory_order.hpp  patch_alter_nigel_colors.hpp  patch_alter_ui_color.hpp  patch_fix_hud_tilemap.hpp
patches/edit_vanilla_content/: patch_fix_item_checks.hpp  patch_remove_tree_cutting_glitch_drops.hpp
patches/engine_improvements/: patch_add_soft_reset.hpp  patch_disable_region_check.hpp  patch_extend_rom.hpp  patch_extend_tile_swap_flag_range.hpp  patch_extend_visited_flag_range.hpp  patch_faster_transitions.hpp  patch_improve_gold_rewards_handling.hpp  patch_improve_ingame_timer.hpp  patch_improve_item_use_handling.hpp  patch_improve_lantern_handling.hpp  patch_new_game.hpp  patch_new_map_format.hpp  patch_normalize_bosses_hp.hpp  patch_optimize_ai_lookup.hpp  patch_optimize_collision_detect.hpp  patch_optimize_reorder_draw_order_list.hpp
tools/: argument_dictionary.hpp  bitfield.hpp  bitstream.hpp  bitstream_reader.cpp  bitstream_reader.hpp  bitstream_writer.hpp  byte_array.hpp  color.cpp  color.hpp  color_palette.hpp  flag.hpp  game_text.cpp  game_text.hpp  huffman_tree.hpp  huffman_tree_node.hpp  lodepng.cpp  lodepng.h  lz77.cpp  lz77.hpp  sprite.cpp  sprite.hpp  stringtools.hpp  textbanks_decoder.cpp  textbanks_decoder.hpp  textbanks_encoder.cpp  textbanks_encoder.hpp  tile_queue.hpp  tools.hpp
